# django-hans

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTORS.txt  LICENSE  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  merge_production_dotenvs_in_dotenv.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.envs/.local/: .django
.envs/.production/: .django  .postgres
.github/: dependabot.yml
.github/workflows/: ci.yml
compose/local/django/: Dockerfile
compose/local/django/celery/flower/: start
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: __init__.py  api_router.py  asgi.py  celery_app.py  urls.py  websocket.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
deploy/local/: setup.yml  web.yml
deploy/local/.envs/: .django  .minio  .postgres  .seaweedfs  .vue
deploy/local/compose/django/: Dockerfile  entrypoint  migrate  start
deploy/local/compose/django/celery/beat/: start
deploy/local/compose/django/celery/flower/: start
deploy/local/compose/django/celery/worker/: start
deploy/local/compose/garage/: Dockerfile.init  garage.toml
deploy/local/compose/minio/: Dockerfile
deploy/local/compose/minio/mc/: Dockerfile  entrypoint
deploy/local/compose/seaweed/: s3.json
deploy/local/compose/vue/: Dockerfile  entrypoint  start
deploy/production/: setup.yml  web.yml
deploy/production/.envs/: .django  .postgres  .vue
deploy/production/compose/aws/: Dockerfile
deploy/production/compose/aws/maintenance/: download  upload
deploy/production/compose/django/: Dockerfile  entrypoint  migrate  start
deploy/production/compose/django/celery/beat/: start
deploy/production/compose/django/celery/flower/: start
deploy/production/compose/django/celery/worker/: start
deploy/production/compose/nginx/: Dockerfile  nginx.conf
deploy/production/compose/postgres/: Dockerfile
deploy/production/compose/postgres/maintenance/: backup  backups  restore  rmbackup
deploy/production/compose/postgres/maintenance/_sourced/: constants.sh  countdown.sh  messages.sh  yes_no.sh
django_hans/: conftest.py
django_hans/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
django_hans/core/: exceptions.py  models.py  serializers.py  urls.py  views.py
django_hans/templates/: base.html
django_hans/users/: adapters.py  admin.py  apps.py  forms.py  managers.py  models.py  serializers.py  tasks.py  views.py
django_hans/users/api/: serializers.py  views.py
django_hans/users/migrations/: 0001_initial.py
django_hans/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_openapi.py  test_tasks.py  test_urls.py  test_views.py
django_hans/users/tests/api/: test_openapi.py  test_urls.py  test_views.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  production.txt
web/: .gitignore  eslint.config.js  eslint.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.js  vite.config.ts  vitest.config.js
web/src/: App.vue  main.js  main.ts
web/src/layouts/: AppLayout.vue
web/src/layouts/__tests__/: AppLayout.spec.js  AppLayout.spec.ts
web/src/pages/: HomePage.vue  NotFoundPage.vue
web/src/pages/auth/: LoginPage.vue  ProfilePage.vue  RegisterPage.vue
web/src/pages/auth/__tests__/: LoginPage.spec.js  LoginPage.spec.ts
web/src/router/: index.js  index.ts  routes.ts
web/src/router/__tests__/: index.spec.js  index.spec.ts
web/src/services/: authService.js  authService.ts  axios.js  axios.ts  tokenService.js  tokenService.ts
web/src/services/__tests__/: authService.spec.js  authService.spec.ts  axios.spec.js  axios.spec.ts  tokenService.spec.js  tokenService.spec.ts
web/src/stores/: auth.js  auth.ts
web/src/stores/__tests__/: auth.spec.js  auth.spec.ts
web/src/types/: index.ts
