[project]
name = "django-hans"
version = "0.1.0"
dependencies = [
    # Base dependencies
    "python-slugify==8.0.4",
    "Pillow==11.3.0",
    "argon2-cffi==25.1.0",
    "redis==6.4.0",
    "hiredis==3.2.1",
    "celery==5.5.3",
    "django-celery-beat==2.8.1",
    "flower==2.0.1",
    "psycopg==3.2.9",
    # Django
    "Django==5.2.5",
    "django-environ==0.12.0",
    "django-model-utils==5.0.0",
    "django-allauth[mfa]==65.11.0",
    "django-redis==6.0.0",
    # Django REST Framework
    "djangorestframework==3.16.1",
    "django-cors-headers==4.7.0",
    "drf-spectacular==0.28.0",
    # Local development
    "Werkzeug[watchdog]==3.1.3",
    "ipdb==0.13.13",
    "watchfiles==1.1.0",
    # Testing
    "mypy==1.17.1",
    "django-stubs[compatible-mypy]==5.2.2",
    "pytest==8.4.1",
    "pytest-sugar==1.1.0",
    "djangorestframework-stubs==3.16.2",
    # Code quality
    "ruff==0.12.11",
    "coverage==7.10.4",
    "pre-commit==4.3.0",
    # Django development
    "factory-boy==3.3.3",
    "django-debug-toolbar==6.0.0",
    "django-extensions==4.1",
    "django-coverage-plugin==3.1.1",
    "pytest-django==4.11.1",
    # Production
    "gunicorn==23.0.0",
    "sentry-sdk==2.35.0",
    "django-storages[s3]==1.14.6",
    "django-anymail==13.0.1",
    # Other libraries
    "pandas==2.3.1",
    "django-filter==25.1",
    "djangorestframework-simplejwt==5.5.1",
    "djoser==2.3.3",
    "django-health-check==3.20.0",
]

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["django_hans/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.ruff]
target-version = "py313"
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
    "config/urls.py",
]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TC",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF",
]
ignore = [
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "UP038", # Checks for uses of isinstance/issubclass that take a tuple
          # of types for comparison.
          # Deactivated because it can make the code slow:
          # https://github.com/astral-sh/ruff/issues/7871
  "COM812", # Trailing comma missing - conflicts with formatter
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
  "UP038",
]

[tool.ruff.lint.isort]
force-single-line = true
