[project]
name = "django-hans"
version = "0.1.0"
dependencies = [
    # Base dependencies
    "python-slugify==8.0.4",
    "Pillow==12.0.0",
    "argon2-cffi==25.1.0",
    "redis==6.4.0",
    "hiredis==3.3.0",
    "celery==5.5.3",
    "django-celery-beat==2.8.1",
    "flower==2.0.1",
    "psycopg==3.2.12",
    # Django
    "Django==5.2.7",
    "django-environ==0.12.0",
    "django-model-utils==5.0.0",
    "django-allauth[mfa]==65.13.0",
    "django-redis==6.0.0",
    # Django REST Framework
    "djangorestframework==3.16.1",
    "django-cors-headers==4.9.0",
    "drf-spectacular==0.28.0",
    # Local development
    "Werkzeug[watchdog]==3.1.3",
    "ipdb==0.13.13",
    "watchfiles==1.1.1",
    # Testing
    "mypy==1.18.2",
    "django-stubs[compatible-mypy]==5.2.7",
    "pytest==8.4.2",
    "pytest-sugar==1.1.1",
    "djangorestframework-stubs==3.16.5",
    # Code quality
    "ruff==0.14.3",
    "coverage==7.11.0",
    "pre-commit==4.3.0",
    # Django development
    "factory-boy==3.3.3",
    "django-debug-toolbar==6.1.0",
    "django-extensions==4.1",
    "django-coverage-plugin==3.2.0",
    "pytest-django==4.11.1",
    # Production
    "gunicorn==23.0.0",
    "uvicorn[standard]==0.38.0",
    "uvicorn-worker==0.4.0",
    "sentry-sdk==2.43.0",
    "django-storages[s3]==1.14.6",
    "django-anymail==13.1",
    # Other libraries
    "pandas==2.3.3",
    "django-filter==25.2",
    "djangorestframework-simplejwt==5.5.1",
    "djoser==2.3.3",
    "django-health-check==3.20.0",
]

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["django_hans/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
    "config/urls.py",
]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TC",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF",
]
ignore = [
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "COM812", # Trailing comma missing - conflicts with formatter
]

[tool.ruff.lint.isort]
force-single-line = true
